# dial9-tokio-telemetry

./: .gitignore  .maintainer-last-run  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md  release-plz.toml  serve.py  test_parser.mjs  trace_viewer.html
dial9-tokio-telemetry/: AGENTS.md  Cargo.toml  README.md  TRACE_ANALYSIS_GUIDE.md  trace_viewer.html
dial9-tokio-telemetry/benches/: flush_path.rs  overhead_bench.rs  poll_overhead.rs  threadlocal_encode.rs  threadlocal_encode_iai.rs  tracing_layer_bench.rs  tracing_layer_iai.rs  writer_encode.rs  writer_encode_iai.rs  writer_write_encoded_iai.rs
dial9-tokio-telemetry/design/: README.md  cpu-profile-integration.md  cpu-profile-progress.md  cpu-sampling-and-worker-id-design.md  data-flow-and-trace-format.md  data-flow-diagram.mmd  in-memory-pipeline.md  memory-profiling.md  metrique-events.md  metrique-integration-changelog.md  metrique-integration-impl-plan.md  metrique-integration-review.md  metrique-integration.md  s3-appender-and-sidecar-design.md  s3-worker-design.md  tl-buffer-drain.md
dial9-tokio-telemetry/design/prompts/: local-encoder-feedback-001.md  local-encoder-feedback-002.md  local-encoder.mapping.json  local-encoder.md
dial9-tokio-telemetry/examples/: analyze_trace.rs  blocking_pool_tracking.rs  blocking_sleep.rs  cancelled_task.rs  completing_task.rs  conditionally_enable.rs  cpu_profile_workload.rs  custom_events.rs  custom_pipeline.rs  debug_timing.rs  kernel_sched_events.rs  long_sleep.rs  long_workload.rs  macro_workload.rs  multi_runtime.rs  optional_telemetry.rs  production_use.rs  realistic_workload.rs  s3_stress_test.rs  simple_workload.rs  thread_per_core.rs  trace_to_fat_jsonl.rs  trace_to_jsonl.rs
dial9-tokio-telemetry/scripts/: check_viewer_syntax.sh  regenerate_demo_trace.sh
dial9-tokio-telemetry/src/: analysis_unstable.rs  config.rs  legacy_config.rs  lib.rs  metrics.rs  primitives.rs  sampling.rs  task_dump.rs  task_dumped.rs  telemetry_runtime.rs  traced.rs  tracing_layer.rs  unwind.rs
dial9-tokio-telemetry/src/background_task/: connection.rs  instance_metadata.rs  mod.rs  pipeline_metrics.rs  s3.rs  sealed.rs
dial9-tokio-telemetry/src/memory_profiling/: mod.rs  ring.rs  source.rs
dial9-tokio-telemetry/src/telemetry/: analysis.rs  buffer.rs  collector.rs  cpu_profile.rs  entry_sink.rs  events.rs  format.rs  metrique_serializer.rs  mod.rs  recorder.rs  task_dump_config.rs  task_metadata.rs  writer.rs
dial9-tokio-telemetry/src/worker/: connection.rs  identity.rs  mod.rs  s3.rs  sealed.rs
dial9-tokio-telemetry/tests/: background_symbolization.rs  common.rs  cpu_sample_clock_alignment.rs  disable_stops_events.rs  echo_server.rs  end_to_end.rs  guard_seals_on_drop.rs  joinset_tracing.rs  js_parser.rs  macro_main.rs  park_unpark_tid.rs  rotation_time_alignment.rs  s3_integration.rs  sched_clock_alignment.rs  sched_events.rs  sched_profiler_fd_leak.rs  task_dump.rs  tracing_layer.rs  validation.rs  worker_integration.rs  writeback_no_trailing_data.rs
dial9-tokio-telemetry/tests/fake_s3/: mod.rs
dial9-tokio-telemetry/trace_viewer/: index.html  package-lock.json  package.json  playwright.config.ts  sanity_test.js  test_parser.js  test_sanity.js  test_trace_analysis.js  test_trace_integrity.js  trace_parser.js  wrangler.jsonc
dial9-tokio-telemetry/trace_viewer/e2e/: trace-viewer.spec.ts
dial9-tokio-telemetry/trace_viewer/tests/: utils.js
dial9-trace-format/: Cargo.toml  README.md  SPEC.md
dial9-trace-format/benches/: codec.rs  codec_iai.rs
dial9-trace-format/examples/: profile_encode.rs  tokio_telemetry_events.rs
dial9-trace-format/fuzz/: Cargo.toml
dial9-trace-format/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_round_trip.rs  fuzz_structured_round_trip.rs  fuzz_transcode.rs
dial9-trace-format/js/: decode.js
dial9-trace-format/src/: codec.rs  decoder.rs  encoder.rs  leb128.rs  lib.rs  schema.rs  symbolize.rs  transcoder.rs  types.rs
dial9-trace-format/tests/: annotations.rs  derive_round_trip.rs  derive_test.rs  js_parser.rs  macro_expand.rs  round_trip.rs  spec_edge_cases.rs  threadlocal_encoding.rs
dial9-trace-format/tests/expand/: all_field_types.expanded.rs  all_field_types.rs  empty_event.expanded.rs  empty_event.rs  simple_event.expanded.rs  simple_event.rs
dial9-tracing/: Cargo.toml
dial9-tracing/src/: lib.rs  tokio_layer.rs
dial9-tracing/tests/: end_to_end.rs
dial9-viewer/: Cargo.toml  README.md  README_TELEMETRY.md  build.rs
dial9-viewer/benchmarks/trace-diagnosis/: EXPECTED.md  README.md  run.sh  setup.sh
dial9-viewer/design/: architecture.md  toolkit-architecture.md
dial9-viewer/skills/: analysis.md  analyze.js  header.md  instrumentation.md  loading.md  recipes.md  red-flags.md  setup.md
dial9-viewer/skills/dial9-red-flags/: SKILL.md
dial9-viewer/skills/dial9-runtime/: SKILL.md
dial9-viewer/skills/dial9-toolkit/: SKILL.md
dial9-viewer/skills/dial9-trace-analysis/: SKILL.md
dial9-viewer/skills/dial9-trace-loading/: SKILL.md
dial9-viewer/skills/dial9-trace-recipes/: SKILL.md
dial9-viewer/src/: main.rs  storage.rs
dial9-viewer/src/server/: mod.rs  trace.rs
dial9-viewer/tests/: server_test.rs
dial9-viewer/ui/: _redirects  analyze_task_dumps.js  browser.html  flamegraph.css  flamegraph.html  flamegraph.js  index.html  test_all_skills_snippets.js  test_directory_parse.js  test_parse_key.js  test_trace_analysis.js  test_trace_integrity.js  trace_analysis.js  trace_parser.js  viewer.html
examples/metrics-service/: Cargo.toml  README.md  plot_bench.py  run_bench.sh
examples/metrics-service/src/: axum_traced.rs  buffer.rs  client.rs  ddb.rs  main.rs  routes.rs
perf-self-profile/: Cargo.toml  test_symbolize.rs
perf-self-profile/benches/: unwind.rs
perf-self-profile/examples/: basic.rs  debug_cs.rs  multithread.rs  test_sleep.rs
perf-self-profile/src/: lib.rs  offline_symbolize.rs  ring_buffer.rs  sampler.rs  symbolize.rs  sys.rs  tracepoint.rs  unwinder.rs
perf-self-profile/tests/: common.rs  multithread.rs  sched_triggers.rs  symbolize_stack.rs  tracepoint_e2e.rs  validate_sys_constants.rs
(+115 files in other folders)
