[workspace]
resolver = "3"
members = [
    "dial9-tokio-telemetry",
    "perf-self-profile",
    "examples/metrics-service",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
libc = "0.2"
dial9-perf-self-profile = { version = "0.1.0", path = "perf-self-profile" }

[profile.release]
debug = 1
