[package]
name = "dial9-tokio-telemetry"
edition = "2024"
version = "0.1.0"
publish = true

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "taskdump", "rt-multi-thread", "sync", "net", "io-util"] }
arc-swap = "1"
libc.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
dial9-perf-self-profile = { workspace = true, optional = true }

[features]
cpu-profiling = ["dep:dial9-perf-self-profile"]

[dev-dependencies]
assert2 = "0.3"
criterion = "0.5"
hdrhistogram = "7"
proptest = "1"
tempfile = "3"
dial9-tokio-telemetry = { path = ".", features = ["cpu-profiling"] }

[[bench]]
name = "poll_overhead"
harness = false

[[bench]]
name = "overhead_bench"
harness = false
