[package]
name = "dial9-viewer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "CLI trace viewer and S3 browser for dial9-tokio-telemetry"

[[bin]]
name = "dial9-viewer"
path = "src/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
anyhow = "1"

[dev-dependencies]
assert2 = { workspace = true }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
s3s = "0.13.0"
s3s-fs = "0.13.0"
s3s-aws = "0.13.0"
tempfile = "3"
urlencoding = "2"
