[package]
name = "perf-self-profile"
version = "0.1.0"
edition = "2024"
description = "Minimal self-profiling via Linux perf_event_open with frame-pointer-based stack traces"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2"
blazesym = "0.2"
perf-event-data = "0.1.8"
perf-event-open-sys2 = "5.0.6"
