[package]
name = "metrics-service"
edition = "2024"
version = "0.1.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
aws-config = "1"
aws-sdk-dynamodb = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dial9-tokio-telemetry = { path = "../../dial9-tokio-telemetry" }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
